[FIX/#156] - 빈 데이터 시에 빈 데이터 반환하게 - 캐싱 적용 - 불필요한 엔티티 조회 제거